// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate aide-déclaration-indépendant: ACRE 1`] = `
"[50000,3177,11368,103,0,14648,35352]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: ACRE 2`] = `
"[15000,948,3170,103,0,4221,10779]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: ACRE 3`] = `
"[5000,312,1293,103,0,1708,3292]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: ACRE 4`] = `
"[10000,630,1432,103,0,2165,7835]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: ACRE 5`] = `
"[10000,630,606,103,0,1339,8661]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: IJSS (indemnité sécurité sociale) 1`] = `
"[50000,3023,11408,103,0,14534,35466]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: RSA 1`] = `
"[500,25,81,103,0,209,291]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: RSA 2`] = `
"[5000,312,1020,103,0,1435,3565]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 1`] = `
"[50000,3176,7849,119,4800,11144,38856]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 2`] = `
"[5000,311,0,119,2400,430,4570]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 1`] = `
"[50000,3175,14093,140,0,17408,32592]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 2`] = `
"[50000,3174,13576,140,0,16890,33110]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 3`] = `
"[50000,3175,11461,140,0,14776,35224]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 4`] = `
"[50000,3176,14097,119,0,17392,32608]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 5`] = `
"[50000,3175,11461,140,0,14776,35224]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: débit de tabac 1`] = `
"[50000,3177,5651,103,0,8931,41069]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: international 1`] = `
"[50000,0,14609,103,0,14712,35288]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, impôt . domiciliation étranger non implémentée"
`;

exports[`calculate aide-déclaration-indépendant: international 2`] = `
"[50000,1267,11875,103,0,13245,36755]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 1`] = `
"[50000,3176,11362,119,0,14657,35343]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 2`] = `
"[5000,311,1292,119,0,1722,3278]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 3`] = `
"[50000,3177,11368,103,0,14648,35352]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 4`] = `
"[5000,312,1293,103,0,1708,3292]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 5`] = `
"[50000,3177,11368,103,0,14648,35352]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 6`] = `
"[5000,312,1293,103,0,1708,3292]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 7`] = `
"[50000,3177,9453,103,0,12733,37267]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 1`] = `
"[500,25,1041,103,0,1169,0]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 2`] = `
"[1000,57,1041,103,0,1201,0]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 3`] = `
"[1500,89,1059,103,0,1251,249]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 4`] = `
"[2000,121,1090,103,0,1314,686]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 5`] = `
"[5000,312,1293,103,0,1708,3292]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 6`] = `
"[10000,630,2104,103,0,2837,7163]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 7`] = `
"[100000,6361,20929,103,0,27393,72607]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 8`] = `
"[1000000,63664,106448,103,0,170215,829785]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-artiste-auteur: bnc 1`] = `"[1230]"`;

exports[`calculate simulations-artiste-auteur: bnc 2`] = `"[1863]"`;

exports[`calculate simulations-artiste-auteur: bnc 3`] = `"[931]"`;

exports[`calculate simulations-artiste-auteur: salarié 1`] = `"[160]"`;

exports[`calculate simulations-artiste-auteur: salarié 2`] = `"[1603]"`;

exports[`calculate simulations-artiste-auteur: salarié 3`] = `"[12410]"`;

exports[`calculate simulations-auto-entrepreneur: ACRE 1`] = `
"[21394,116,20000,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 2`] = `
"[22152,179,20000,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 3`] = `
"[33228,269,30000,0,30000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 4`] = `
"[45267,439,40000,0,40000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 1`] = `"[20000,292,16499,0,16499]"`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 2`] = `"[20000,317,16193,0,16193]"`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 3`] = `"[20000,297,16438,0,16438]"`;

exports[`calculate simulations-auto-entrepreneur: aides 1`] = `
"[5348,29,5000,0,5000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: aides 2`] = `
"[53484,290,50000,0,50000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: impôt sur le revenu 1`] = `"[32092,591,25000,0,25000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 1`] = `"[574,6,500,0,500]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 2`] = `"[1148,12,1000,0,1000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 3`] = `"[2297,25,2000,0,2000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 4`] = `"[5742,62,5000,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 5`] = `"[11483,124,10000,0,10000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 6`] = `"[22966,247,20000,0,20000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 7`] = `"[57415,618,50000,0,50000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 8`] = `"[80381,865,70000,956,69044]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 9`] = `
"[114830,1236,100000,3297,96703]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 10`] = `
"[1148303,12359,1000000,126543,873457]
Notifications affichées : dirigeant . auto-entrepreneur . seuils dépassés . notification, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-impot-société: bénéfices 1`] = `
"[0,0]
Notifications affichées : entreprise . bénéfice . information sur le report de déficit"
`;

exports[`calculate simulations-impot-société: bénéfices 2`] = `"[0,0]"`;

exports[`calculate simulations-impot-société: bénéfices 3`] = `"[300,0]"`;

exports[`calculate simulations-impot-société: bénéfices 4`] = `"[3000,0]"`;

exports[`calculate simulations-impot-société: bénéfices 5`] = `"[51044,0]"`;

exports[`calculate simulations-impot-société: bénéfices 6`] = `"[555044,0]"`;

exports[`calculate simulations-impot-société: bénéfices 7`] = `"[5595044,159457]"`;

exports[`calculate simulations-impot-société: prorata temporis 1`] = `"[275044,0]"`;

exports[`calculate simulations-impot-société: prorata temporis 2`] = `"[277936,0]"`;

exports[`calculate simulations-impot-société: prorata temporis 3`] = `"[272981,0]"`;

exports[`calculate simulations-indépendant: acre 1`] = `
"[73023,23023,50000,51980,8213,41787,0,73023]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: activité 1`] = `
"[23690,3690,20000,20640,599,19401,0,23690]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: activité 2`] = `
"[23706,3706,20000,20640,599,19401,0,23706]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: cotisations minimales 1`] = `
"[220,120,100,103,0,100,0,220]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: cotisations minimales 2`] = `
"[220,120,100,103,0,100,0,220]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: impôt sur le revenu 1`] = `
"[23690,3690,20000,20640,599,19401,0,23690]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: impôt sur le revenu 2`] = `
"[73023,23023,50000,51980,8213,41787,0,73023]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: impôt sur le revenu 3`] = `
"[23690,3690,20000,20640,2064,17936,0,23690]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: inversions 1`] = `
"[2000,392,1608,1660,0,1608,0,2000]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: inversions 2`] = `
"[50000,13698,36302,37657,4481,31821,0,50000]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: inversions 3`] = `
"[11896,1896,10000,10320,0,10000,0,11896]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: inversions 4`] = `
"[68273,21573,46700,48551,6700,40000,0,68273]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: inversions 5`] = `
"[11896,1896,10000,10320,0,10000,1000,12896]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: inversions 6`] = `
"[19000,2977,16023,16536,0,16023,1000,20000]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: inversions 7`] = `
"[17999,2824,15175,15661,0,15175,2000,20000]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: échelle de revenus 1`] = `
"[693,193,500,516,0,500,0,693]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: échelle de revenus 2`] = `
"[1282,282,1000,1032,0,1000,0,1282]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: échelle de revenus 3`] = `
"[1872,372,1500,1548,0,1500,0,1872]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: échelle de revenus 4`] = `
"[2461,461,2000,2064,0,2000,0,2461]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: échelle de revenus 5`] = `
"[5999,999,5000,5160,0,5000,0,5999]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: échelle de revenus 6`] = `
"[11896,1896,10000,10320,0,10000,0,11896]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-indépendant: échelle de revenus 7`] = `
"[139593,39593,100000,103788,24909,75091,0,139593]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-indépendant: échelle de revenus 8`] = `
"[1239954,239954,1000000,1033666,444476,555524,0,1239954]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: CIPAV 1`] = `
"[2255,0,1755,500,0,500]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: CIPAV 2`] = `
"[2805,0,1805,1000,0,1000]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: CIPAV 3`] = `
"[3355,0,1855,1500,0,1500]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: CIPAV 4`] = `
"[3905,0,1905,2000,0,2000]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: CIPAV 5`] = `
"[7205,0,2205,5000,0,5000]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: CIPAV 6`] = `
"[12704,0,2704,10000,0,10000]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: CIPAV 7`] = `
"[146241,0,46241,100000,24952,75048]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: CIPAV 8`] = `
"[1238004,0,238004,1000000,444454,555546]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 1`] = `
"[30000,0,4731,25269,1382,23887]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 2`] = `
"[30000,0,4724,25276,1383,23893]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 3`] = `
"[300000,0,61611,238389,81356,157033]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: avocat 1`] = `
"[50000,0,10570,39430,4853,34577]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: avocat 2`] = `
"[50000,0,11311,38689,4765,33924]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: expert-comptable 1`] = `
"[20000,0,0,0,0,0]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: expert-comptable 2`] = `
"[50000,0,13275,36725,4532,32193]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: médecin 1`] = `
"[50000,0,10691,39307,4839,34468]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: médecin 2`] = `
"[50000,0,15045,34955,3595,31360]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: médecin 3`] = `
"[300000,0,73630,226370,77389,148981]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: médecin 4`] = `
"[400000,0,93706,306295,120519,185776]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: médecin 5`] = `
"[120000,0,26977,93023,23107,69916]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-professions-libérales: médecin 6`] = `
"[50000,0,10691,39307,4839,34468]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: sage-femme 1`] = `
"[50000,0,11849,38150,4701,33449]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-professions-libérales: sage-femme 2`] = `
"[20000,0,3604,16396,0,16396]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 3`] = `
"[4000,0,981,3018,0,3018]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 4`] = `
"[20000,0,3604,16396,0,16396]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 5`] = `
"[20000,0,3604,16396,0,16396]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 6`] = `
"[20000,0,3604,16396,0,16396]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 1`] = `
"[606,0,0,7127,4,13]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 2`] = `
"[1249,0,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 3`] = `
"[1893,0,0,21731,4,40]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 1`] = `
"[1893,0,0,21731,4,40]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 2`] = `
"[1893,0,0,21731,4,40]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 3`] = `
"[1893,0,0,21731,4,40]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 4`] = `
"[1249,0,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 5`] = `
"[14490,0,0,150669,4,46]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 6`] = `
"[1249,0,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 1`] = `
"[1249,0,0,0,0,0]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 2`] = `
"[1249,0,0,0,0,0]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 3`] = `
"[1249,0,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 4`] = `
"[1249,0,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 5`] = `
"[1249,0,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 1`] = `
"[606,0,0,7127,4,13]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 2`] = `
"[1249,0,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 1`] = `
"[-30,0,0,0,0,0]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 2`] = `
"[27,0,0,184,0,1]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 3`] = `
"[91,0,0,1285,1,2]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 4`] = `
"[284,0,0,3476,3,6]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 5`] = `
"[606,0,0,7127,4,13]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 6`] = `
"[1249,0,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 7`] = `
"[2512,0,0,28761,4,46]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 8`] = `
"[4758,0,0,51817,4,46]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 1`] = `
"[0,0,9349,1450,2,0]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 2`] = `
"[0,0,18697,2900,3,8]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 3`] = `
"[0,0,28046,4350,4,12]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 1`] = `"[0,0,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 2`] = `"[0,0,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 3`] = `"[0,0,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 4`] = `"[0,0,18288,3045,4,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 5`] = `
"[0,0,274318,20568,4,56]
Notifications affichées : dirigeant . auto-entrepreneur . seuils dépassés . notification, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 6`] = `"[0,0,17852,2973,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 1`] = `"[0,0,15580,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 2`] = `"[0,0,15560,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 3`] = `"[0,0,17336,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 4`] = `"[0,0,17417,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 5`] = `"[0,0,15580,5000,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 1`] = `"[0,0,10450,1740,3,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 2`] = `"[0,0,30480,5075,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 1`] = `"[0,0,87,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 2`] = `"[0,0,871,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 3`] = `"[0,0,1742,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 4`] = `"[0,0,4354,725,1,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 5`] = `"[0,0,8709,1450,2,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 6`] = `"[0,0,17417,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 7`] = `"[0,0,43543,7250,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 8`] = `
"[0,0,87085,14500,4,40]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 1`] = `
"[0,8392,0,6102,4,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 2`] = `
"[0,16871,0,12270,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 3`] = `
"[0,22331,0,16308,4,32]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 1`] = `
"[0,24772,0,20779,4,40]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 2`] = `
"[0,24589,0,21520,4,42]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 3`] = `
"[0,25198,0,19054,4,37]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 4`] = `
"[0,16795,0,12577,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 5`] = `
"[0,225725,0,57933,4,56]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 6`] = `
"[0,16779,0,12640,4,25]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, dirigeant . indépendant . contrats madelin . contrôle montant charges"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 1`] = `
"[0,16871,0,12270,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 2`] = `
"[0,16633,0,0,0,0]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 3`] = `
"[0,16857,0,12260,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 4`] = `
"[0,16871,0,12270,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 5`] = `
"[0,16871,0,12270,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 1`] = `
"[0,8392,0,6102,4,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 2`] = `
"[0,16871,0,12270,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 1`] = `
"[0,-3,0,0,3,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 2`] = `
"[0,761,0,553,3,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 3`] = `
"[0,1608,0,1169,3,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 4`] = `
"[0,4152,0,3020,3,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 5`] = `
"[0,8392,0,6102,4,21]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 6`] = `
"[0,16871,0,12270,4,24]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 7`] = `
"[0,36302,0,26536,4,52]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 8`] = `
"[0,69896,0,36428,4,56]
Notifications affichées : dirigeant . indépendant . avertissement base forfaitaire, entreprise . chiffre d'affaires . franchise de TVA dépassée . notification"
`;

exports[`calculate simulations-salarié: CCN HCR 1`] = `
"[3532,0,2500,1998,1887]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 1`] = `
"[3966,0,2500,1987,1878]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 2`] = `
"[3942,0,2500,1972,1864]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 3`] = `
"[3997,0,2500,1979,1867]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN compta 1`] = `
"[3470,0,2500,2006,1898]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN optique 1`] = `
"[3591,0,2500,2068,1953]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN spectacle vivant 1`] = `
"[3923,0,2500,1938,1856]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN sport 1`] = `
"[541,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: JEI 1`] = `"[3441,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: JEI 2`] = `
"[26625,0,20000,15969,10503]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: JEI 3`] = `
"[4518,0,4000,3141,2745]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-salarié: activité partielle 1`] = `"[27,0,1560,1209,1209]"`;

exports[`calculate simulations-salarié: activité partielle 2`] = `"[427,0,4000,2594,2392]"`;

exports[`calculate simulations-salarié: activité partielle 3`] = `"[1429,0,8000,5209,4245]"`;

exports[`calculate simulations-salarié: activité partielle 4`] = `"[1172,0,4000,2704,2426]"`;

exports[`calculate simulations-salarié: activité partielle 5`] = `"[2670,0,4000,2870,2574]"`;

exports[`calculate simulations-salarié: activité partielle 6`] = `"[327,3750,3000,1940,1833]"`;

exports[`calculate simulations-salarié: activité partielle 7`] = `"[427,0,4000,2594,2485]"`;

exports[`calculate simulations-salarié: activité partielle 8`] = `"[397,0,2000,1555,1522]"`;

exports[`calculate simulations-salarié: activité partielle 9`] = `"[1241,0,2000,1555,1521]"`;

exports[`calculate simulations-salarié: activité partielle 10`] = `"[927,0,6000,4182,3498]"`;

exports[`calculate simulations-salarié: activité partielle 11`] = `"[2653,0,9000,6237,4945]"`;

exports[`calculate simulations-salarié: aides 1`] = `"[2303,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 2`] = `
"[12825,0,10000,8911,7620]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé, contrat salarié . régime des impatriés . information"
`;

exports[`calculate simulations-salarié: aides 3`] = `"[2050,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 4`] = `
"[2658,0,2000,1720,1656]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: aides 5`] = `"[1883,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 6`] = `"[2133,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides embauche covid 1`] = `
"[1237,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 2`] = `"[7086,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: aides embauche covid 3`] = `
"[1493,0,1500,1284,1284]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 4`] = `
"[886,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 1`] = `
"[1552,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 2`] = `
"[1386,0,1500,1449,1449]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: assimilé salarié 1`] = `
"[7016,0,5000,3943,3286]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-salarié: assimilé salarié 2`] = `
"[1583,0,1500,1163,1163]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-salarié: assimilé salarié 3`] = `
"[3685,0,3000,2348,2161]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-salarié: atmp 1`] = `"[2521,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: avantages 1`] = `"[2655,0,2000,1540,1490]"`;

exports[`calculate simulations-salarié: avantages 2`] = `"[2665,0,2000,1539,1489]"`;

exports[`calculate simulations-salarié: avantages 3`] = `"[2574,0,2000,1549,1500]"`;

exports[`calculate simulations-salarié: cadre 1`] = `"[4123,0,3000,2348,2160]"`;

exports[`calculate simulations-salarié: cdd 1`] = `
"[3292,0,2200,1894,1815]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 2`] = `
"[3117,0,2200,1824,1746]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 3`] = `
"[3378,0,2200,1997,1918]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 4`] = `
"[4112,0,2200,2387,2262]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 5`] = `
"[3392,0,2200,1746,1695]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: contrat pro 1`] = `"[904,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié: contrat pro 2`] = `"[1571,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié: effectif 1`] = `"[2466,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 2`] = `"[2513,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 3`] = `"[2527,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 4`] = `"[2527,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: frais pro - DFS 1`] = `"[2227,0,2000,1630,1630]"`;

exports[`calculate simulations-salarié: frais pro - DFS 2`] = `"[2318,0,2000,1584,1549]"`;

exports[`calculate simulations-salarié: frais pro - DFS 3`] = `"[2248,0,2000,1606,1558]"`;

exports[`calculate simulations-salarié: frais pro - DFS 4`] = `"[2232,0,2000,1612,1563]"`;

exports[`calculate simulations-salarié: frais pro - DFS 5`] = `"[2425,0,2000,1590,1590]"`;

exports[`calculate simulations-salarié: frais pro - DFS 6`] = `"[1768,0,1700,1363,1363]"`;

exports[`calculate simulations-salarié: frais pro - DFS 7`] = `"[3287,0,2600,2125,2092]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 1`] = `"[4388,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 2`] = `"[5019,0,3200,2916,2619]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 3`] = `"[4694,0,3200,2836,2637]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 1`] = `"[4387,0,3200,2551,2354]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 2`] = `"[5097,0,3200,3261,3064]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 3`] = `"[4387,0,3200,2551,2354]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 4`] = `"[4363,0,3200,2527,2330]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 1`] = `"[2506,0,2000,1521,1487]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 2`] = `"[4308,0,3000,2134,1944]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 3`] = `"[2550,0,2000,1493,1458]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 1`] = `"[4388,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 2`] = `"[4388,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 3`] = `"[5014,0,3200,2913,2617]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 4`] = `"[4388,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 5`] = `"[4397,0,3200,2548,2349]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 6`] = `"[4125,0,3200,2624,2422]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 1`] = `"[2570,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 2`] = `"[2529,0,2000,1606,1572]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 3`] = `"[2641,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 4`] = `
"[2552,0,2000,1627,1592]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 5`] = `
"[2517,0,2000,1601,1566]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 6`] = `
"[2517,0,2000,1601,1566]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 7`] = `
"[3337,2446,2000,1919,1886]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 8`] = `
"[3286,2286,2000,1889,1856]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 1`] = `"[4077,0,3000,2353,2330]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 2`] = `"[4077,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 3`] = `"[4077,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 4`] = `"[4077,0,3000,2353,1907]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 5`] = `"[4077,0,3000,2353,2217]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 6`] = `"[12892,0,9000,7156,6036]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 7`] = `"[12892,0,9000,7156,6327]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 8`] = `"[12892,0,9000,7156,6852]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 9`] = `"[4077,0,3000,2353,2170]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 10`] = `"[4077,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 1`] = `"[4077,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 2`] = `
"[41840,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 3`] = `
"[4520,0,3000,2590,2392]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 4`] = `"[3882,0,3000,2353,2252]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 5`] = `
"[41840,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 6`] = `"[4257,0,3000,2626,2485]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 7`] = `
"[41840,0,30000,26966,16655]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 8`] = `"[4077,0,3000,2353,2107]"`;

exports[`calculate simulations-salarié: inversions 1`] = `"[2000,0,1753,1365,1358]"`;

exports[`calculate simulations-salarié: inversions 2`] = `"[3475,0,2554,2000,1889]"`;

exports[`calculate simulations-salarié: inversions 3`] = `"[3675,0,2703,2117,2000]"`;

exports[`calculate simulations-salarié: lodeom 1`] = `
"[1593,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom 3`] = `"[3882,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom 4`] = `"[5674,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom 5`] = `"[7890,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 1`] = `
"[1593,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 3`] = `"[3422,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 4`] = `"[5567,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 5`] = `"[7890,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 1`] = `
"[1593,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 2`] = `"[2085,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 3`] = `"[3227,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 4`] = `"[4887,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 5`] = `"[7890,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: stage 1`] = `
"[507,0,500,500,500]
Notifications affichées : contrat salarié . stage . avertissement, contrat salarié . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié: stage 2`] = `
"[2491,0,2000,1750,1750]
Notifications affichées : contrat salarié . stage . avertissement"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 1`] = `
"[1606,0,1521,1195,1195]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 2`] = `"[3423,0,2500,1979,1869]"`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 3`] = `
"[1593,0,1521,1170,1170]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 4`] = `"[3382,0,2500,1938,1830]"`;

exports[`calculate simulations-salarié: temps partiel 1`] = `"[2580,2188,2000,1561,1527]"`;

exports[`calculate simulations-salarié: temps partiel 2`] = `"[2534,2500,1857,1448,1428]"`;

exports[`calculate simulations-salarié: temps partiel 3`] = `
"[1152,1750,1000,770,770]
Notifications affichées : contrat salarié . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié: treizième mois 1`] = `"[3390,0,2300,1950,1842]"`;

exports[`calculate simulations-salarié: treizième mois 2`] = `"[3801,2965,2300,2186,2071]"`;

exports[`calculate simulations-salarié: treizième mois 3`] = `"[3032,0,2300,1799,1733]"`;

exports[`calculate simulations-salarié: échelle de salaires 1`] = `
"[130,0,100,57,57]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 2`] = `
"[284,0,250,176,176]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 3`] = `
"[541,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 4`] = `
"[799,0,750,572,572]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 5`] = `
"[1056,0,1000,770,770]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 6`] = `
"[1313,0,1250,968,968]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 7`] = `
"[1571,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 8`] = `"[2466,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: échelle de salaires 9`] = `"[3402,0,2500,1957,1848]"`;

exports[`calculate simulations-salarié: échelle de salaires 10`] = `"[4077,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: échelle de salaires 11`] = `"[5674,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: échelle de salaires 12`] = `"[7086,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: échelle de salaires 13`] = `
"[14321,0,10000,7958,5975]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 14`] = `
"[28349,0,20000,15969,10503]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 15`] = `
"[128595,0,100000,87157,48426]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 16`] = `
"[1244019,0,1000000,896257,498390]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;
